kubernetes/uptime-kuma/components/openshift/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: uptime-kuma
spec:
  egress:
    # Cloudflare DNS
    - type: Allow
      to:
        cidrSelector: 1.1.1.1/32
    - type: Allow
      to:
        cidrSelector: 1.0.0.1/32
    # Cloudflare API Ips (arthurvardevanyan.com)
    # https://www.cloudflare.com/ips/
    - type: Allow
      to:
        cidrSelector: 104.16.0.0/13
    - type: Allow
      to:
        cidrSelector: 104.24.0.0/14
    - type: Allow
      to:
        cidrSelector: 172.64.0.0/13
    # Modem
    - type: Allow
      to:
        cidrSelector: 192.168.1.254/32
    - type: Allow
      to:
        dnsName: truenas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: una.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: minio.microshift.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: console.minio.microshift.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: metrics.microshift.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: console.s3.unas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: s3.unas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: router-apps.app.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: www.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: arthurvardevanyan.com
    - type: Allow
      to:
        cidrSelector: 216.239.38.21/32
    - type: Allow
      to:
        cidrSelector: 216.239.36.21/32
    - type: Allow
      to:
        cidrSelector: 216.239.34.21/32
    - type: Allow
      to:
        cidrSelector: 216.239.32.21/32
    - type: Allow
      to:
        cidrSelector: 192.178.0.0/15
    - type: Allow
      to:
        cidrSelector: 142.250.0.0/15
    - type: Allow
      to:
        dnsName: truenas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: minio.microshift.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: unas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: router-apps.app.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: unifi.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: pihole.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: technitium.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: technitium.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: api.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: apps.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: kfca.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: app.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        cidrSelector: 10.101.10.5/32
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
